# fmri-outlier-detector

./: .gitignore  README.md  make_brain_masks.py  make_brain_zstat_map_grids.py  make_zstat_matrix_heatmaps.py  plotting_functions.py  pyproject.toml  revised_code.ipynb  run_make_brain_masks.batch  run_make_brain_zstat_map_grids.batch  run_make_zstat_matrix_heatmaps.batch  run_network.py  run_network.sh  run_report.py  run_report.sh  run_survey_medley_example.batch  survey_medley_example.py  utils.py
sherlock_output/: make_plots_63392762.err  make_plots_63393410.err  make_plots_63393410.out  make_plots_63400569.err
survey_medley_output_example/: percent_outlier_data.csv
