[project]
name = "vif-exploration"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "bs4>=0.0.2",
    "img2pdf>=0.6.0",
    "matplotlib>=3.10.1",
    "nibabel>=5.3.2",
    "nilearn>=0.11.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]


[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["E501", "W", "N", "R", "I"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]
